--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,29 @@
 bcrypt==3.1.6
+certifi==2019.6.16
 cffi==1.12.3
+chardet==3.0.4
 Click==7.0
 Flask==1.0.3
+Flask-Admin==1.5.3
 Flask-Bcrypt==0.7.1
 Flask-Login==0.4.1
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
+gunicorn==19.9.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Pillow==6.0.0
 pycparser==2.19
+PyJWT==1.7.1
+PySocks==1.7.0
+pytz==2019.1
+requests==2.22.0
 six==1.12.0
 SQLAlchemy==1.3.3
+twilio==6.29.0
+Unipath==1.1
+urllib3==1.25.3
 Werkzeug==0.15.4
 WTForms==2.2.1
