--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,9 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Pillow==6.0.0
+psycopg2-binary==2.8.3
 pycparser==2.19
 PyJWT==1.7.1
-psycopg2==2.7.5
 PySocks==1.7.0
 pytz==2019.1
 requests==2.22.0
