--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ myenv/
 __pycache__/
 __init__.pyc
 corgiTexter/admin_portal/.DS_Store
+corgiTexter/static/.DS_Store
 corgiTexter/.DS_Store
 .DS_Store
 site.db
