--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
+Babel==2.7.0
 bcrypt==3.1.6
+blinker==1.4
+bottle==0.12.17
 certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 Flask==1.0.3
 Flask-Admin==1.5.3
+Flask-BabelEx==0.9.3
 Flask-Bcrypt==0.7.1
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 gunicorn==19.9.0
@@ -14,6 +21,7 @@ idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+passlib==1.7.1
 Pillow==6.0.0
 psycopg2-binary==2.8.3
 pycparser==2.19
@@ -22,6 +30,7 @@ PySocks==1.7.0
 pytz==2019.1
 requests==2.22.0
 six==1.12.0
+speaklater==1.3
 SQLAlchemy==1.3.3
 twilio==6.29.0
 Unipath==1.1
