--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+atomicwrites==1.3.0
+attrs==19.1.0
 bcrypt==3.1.7
 certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
 Click==7.0
+coverage==4.5.4
 Flask==1.1.1
 Flask-Admin==1.5.3
 Flask-Bcrypt==0.7.1
@@ -11,19 +14,29 @@ Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 gunicorn==19.9.0
 idna==2.8
+importlib-metadata==0.19
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+more-itertools==7.2.0
+packaging==19.1
 Pillow==6.1.0
+pluggy==0.12.0
 psycopg2-binary==2.8.3
+py==1.8.0
 pycparser==2.19
 PyJWT==1.7.1
+pyparsing==2.4.2
 PySocks==1.7.0
+pytest==5.1.0
+pytest-cov==2.7.1
 pytz==2019.2
 requests==2.22.0
 six==1.12.0
 SQLAlchemy==1.3.5
 twilio==6.29.3
 urllib3==1.25.3
+wcwidth==0.1.7
 Werkzeug==0.15.4
 WTForms==2.2.1
+zipp==0.5.2
